<resources>
    <string name="app_name">Xzit</string>
    <string name="client_id_google">740556817649-a98eevdhqtqtlrd1jtufhosinlqnpd78.apps.googleusercontent.com</string>
    <string name="api_key_google">AIzaSyCcIfPzUGMexN_MhNOxdvzT90kako5cHtc</string>
    <string name="facebook_app_id">1647348822081517</string>
    <string name="fb_login_protocol_scheme">fb1647348822081517</string>
    <string name="signin">Sign in</string>
    <string name="emailaddress"> Email Address</string>
    <string name="password">Password</string>
    <string name="newtoxzit">New to Xzit?</string>
    <string name="signup">Sign up</string>
    <string name="orloginusingsocialmedia">Or Login using social media</string>
    <string name="forgotpassword">Forgot Password</string>
    <string name="forgotpassword_q">Forgot Password?</string>
    <string name="submit">Submit</string>
    <string name="email">Email</string>
    <string name="next">Next</string>
    <string name="passwordconfirmation">Password Confirmation</string>
    <string name="businessname">Business name</string>
    <string name="username">User name</string>
    <string name="modifyprofile">Modify Profile</string>
    <string name="name">Keyur Vadhadia</string>
    <string name="phone">Phone</string>
    <string name="dob">DOB</string>
    <string name="male">Male</string>
    <string name="india">India</string>
    <string name="save">Save</string>
    <string name="categories">Categories</string>
    <string name="motreal">Motreal</string>
    <string name="today">Today</string>
    <string name="hotspot">HotSpot</string>
    <string name="changepassword">Change Password</string>
    <string name="newpassword">New Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="confirmemail">Confirm Email</string>
    <string name="newemail">New Email</string>
    <string name="friends">Friends</string>
    <string name="search">Search...</string>
    <string name="suggestions">Suggestions</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="mypreference">My Preference</string>
    <string name="music">MUSIC</string>
    <string name="venues">Venues</string>
    <string name="createvent">Create Event</string>
    <string name="eventname">Event name</string>
    <string name="payments">Payments</string>
    <string name="lookatthat">Look at that...</string>
    <string name="detail">We don\'t have your phone number  \n add it for a better experience</string>
    <string name="country">Country</string>
    <string name="phone_Recommended">Phone(Recommended)</string>
    <string name="detail_">By clicking I agree, you agree that you have had an  opportunity to review and are consenting without reservation to the following terms and conditions.</string>
    <string name="NameOnCard">Name On Card</string>
    <string name="CardNumber">Card Number</string>
    <string name="cvv">Cvv</string>
    <string name="SavePaymentMethod">Save Payment Method</string>
    <string name="awesome">Awesome</string>
    <string name="discover">Discover</string>
    <string name="Ialreadyknowtheapp">I already know the app</string>
    <string name="TermsandConditions">Terms and Conditions</string>
    <string name="faq">FAQ</string>
    <string name="venuepreference">Venue Preference</string>
    <string name="foodpreference">Food Preference</string>
    <string name="musicpreference">Music Preference</string>
    <string name="moreaboutyou">More about you</string>
    <string name="weneedtoknowalittleabitmore">We need to know a little a bit more\n about you...</string>
    <string name="birthdate">Birthdate (Recommended)</string>
    <string name="register_as_an_xzit_member">Register as an XZIT member?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="connect_with_facebook">Connect With Facebook</string>
    <string name="sign_up_with_email">Sign up with email</string>
    <string name="user_name">User Name</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="already_on_xzit_member">Already on Xzit member?</string>
    <string name="select_a_category">Select a category</string>
    <string name="select_a_preference">Select a preference</string>
    <string name="others">Others</string>
    <string name="telephone">Telephone</string>
    <string name="website">Website</string>
    <string name="business_hours">Business Hours</string>
    <string name="enjoy_it">Enjoy It</string>
    <string name="merchants_artist">Merchants | Artist</string>
    <string name="user">User</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="female">Female</string>
    <string name="search..">Search...</string>
    <string name="add_contact">Add Contact</string>
    <string name="publication_you_made">Publication you made</string>
    <string name="your_stories">Your Stories</string>
    <string name="settings">Settings</string>
    <string name="xzit_account">Xzit Account</string>
    <string name="payment_methods">Payment methods</string>
    <string name="change_password">Change Password</string>
    <string name="rate_the_app">Rate the App</string>
    <string name="terms_amp_condition"><![CDATA[Terms & condition]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="notification">Notification</string>
    <string name="notifications">Notifications</string>
    <string name="restaurants">Restaurants</string>
    <string name="most_viewed">Most Viewed</string>
    <string name="facebook_account">Facebook Account</string>
    <string name="localization">Localization</string>
    <string name="current_email">Current Email</string>
    <string name="current_password">Current Password</string>
    <string name="change_email">Change Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="news">News</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="invitation">Invitation</string>
    <string name="sent">Sent</string>
    <string name="invitation_n_sent">Invitation \n sent</string>
    <string name="invitation_n_received">Invitation \nreceived</string>
    <string name="add_guest">Add Guest</string>
    <string name="add_friends">Add Friends</string>
    <string name="add_friend">Add Friend</string>
    <string name="received_date">Received Date</string>
    <string name="reviews">Reviews</string>
    <string name="go_to_direction">Go To Direction</string>
    <string name="guest_list">Guest-List</string>
    <string name="from">From</string>
    <string name="upcoming_news">Upcoming NEWS</string>
    <string name="ok">Ok</string>
    <string name="no_payment_method_found">NO PAYMENT METHOD FOUND</string>
    <string name="add_new">Add New</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="add_payment_method">Add Payment Method</string>
    <string name="enter_your_credit_debit_card_details">Enter Your Credit/Debit Card Details</string>
    <string name="card">Card</string>
    <string name="net_banking">Net Banking</string>
    <string name="upi">UPI</string>
    <string name="save_card_data_for_future_payments">Save card data for future payments</string>
    <string name="add">Add</string>
    <string name="what_is_venu">What is a \"Venue\"?</string>
    <string name="venue_ans">A \"venue\" is the word used to describe a  type of location (Types of venue: Nightclubs, Restaurents, Bars, Pubs etc.)</string>
    <string name="_new">New</string>
    <string name="enter_your_email_mobile_number">Enter Your Email/Mobile Number</string>
    <string name="add_story">Add Story</string>
    <string name="publish">Publish</string>
    <string name="add_location">Add Location</string>
    <string name="write_caption">Write Caption</string>
    <string name="accept">Accept</string>
    <string name="mon">Mon</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_select_dob">Please select date of birth</string>
    <string name="please_enter_valid_email">Please enter valid emai</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_enter_conf_password">Please enter confirm password</string>
    <string name="please_enter_at_least_password">Please enter at lease 6 characters password</string>
    <string name="please_enter_current_password">Please enter current password</string>
    <string name="please_enter_new_password">Please enter new password</string>
    <string name="password_does_not_match">Password and Confirm password does not match</string>
    <string name="please_check_internet_connection">Please check your internet connection</string>
    <string name="please_user_name">Please enter user name</string>
    <string name="please_business_name">Please enter business name</string>
    <string name="please_enter_business_name">Please enter business name</string>
    <string name="please_enter_user_name">Please enter user name</string>
    <string name="please_enter_title">Please enter title</string>
    <string name="please_enter_telephone">Please enter telephone</string>
    <string name="please_enter_phone">Please enter phone</string>
    <string name="please_grant_all_required_permissions_from_application_setting">Please grant all required permissions from application setting</string>
    <string name="please_enter_description">Please enter description</string>
    <string name="please_enter_business_hours">Please enter business hours</string>
    <string name="please_select_at_least_one_preference">Please select at least one preference</string>
    <string name="please_select_category">Please select category</string>
    <string name="last_name">Last Name</string>
    <string name="please_enter_gender">Please enter gender</string>
    <string name="please_enter_website">Please enter website</string>
    <string name="you_are_now_officially_an_xzit_nmember_time_to_live_an_nexperience">You are now officially an XZIT \nmember. Time To Live An \nExperience !</string>
    <string name="upcoming">Upcoming</string>
    <string name="copy_post_link">Copy Post Link</string>
    <string name="share_post">Share Post</string>
    <string name="report_post">Report Post</string>
    <string name="friend_request">Friend Request</string>
    <string name="report">Report</string>
    <string name="submit_report">Submit Report</string>
    <string name="your_comments">Your Comments</string>
    <string name="are_you_sure_to_unfriend">Are you sure you want to Unfriend ?</string>
    <string name="are_you_sure_to_block_this_user">Are you sure you want to block this user ?</string>
    <string name="are_you_sure_to_un_block_this_user">Are you sure you want to unblock this user ?</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="block_user">Block User</string>
    <string name="unblock_user">Unblock User</string>
    <string name="upload_post_image">UPLOAD POST IMAGE</string>
    <string name="event_duration">Event Duration</string>
    <string name="event_duration_choose_date">Event Duration (Choose your date)</string>
    <string name="event_time">Event Time (Default business hours)</string>
    <string name="event_price">Event Price</string>
    <string name="deal_price">Deal Price</string>
    <string name="discount">Discount%</string>
    <string name="discount_doller">Discount$</string>
    <string name="address_pick_from_google_map">Address(pick from google map)</string>
    <string name="on_sale">On Sale</string>
    <string name="everyday">Everyday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
</resources>