<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/layoutTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgbackscreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/bg"
                tools:ignore="ContentDescription" />



        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layoutBottom"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@id/layoutTop"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="40dp">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:textColor="@color/textcolor"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/lookatthat"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/txtSubTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtTitle"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:textColor="@color/textcolor"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/detail"
                android:textSize="15sp" />

            <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cardviewCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtSubTitle"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="15dp"
                android:background="@android:color/white"
                card_view:cardCornerRadius="5dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/quicksand_regular"
                    android:gravity="start"
                    android:hint="@string/country"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textAlignment="textStart"
                    tools:ignore="Autofill,RtlSymmetry,TextFields,UnusedAttribute" />

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cardviewEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cardviewCountry"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="15dp"
                android:background="@android:color/white"
                card_view:cardCornerRadius="5dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/quicksand_regular"
                    android:gravity="start"
                    android:hint="@string/phone_Recommended"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textAlignment="textStart"
                    tools:ignore="Autofill,RtlSymmetry,TextFields,UnusedAttribute" />

            </androidx.cardview.widget.CardView>


            <Button
                android:id="@+id/btnNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cardviewEmailAddress"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/backgoundround"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/next"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:id="@+id/txtDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnNext"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/detail_"
                android:textSize="15sp"
                tools:ignore="UnusedAttribute" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/overlapImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/layoutBottom"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="-70dp"
            android:adjustViewBounds="true"
            android:src="@drawable/logo_forget_password" />

    </RelativeLayout>
</layout>