<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_splash"
        tools:context=".activity.SplashScreen">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/imgLogo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="@dimen/_minus20sdp"
                    android:background="@drawable/logo_splash" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tvAppName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:fontFamily="@font/quicksand_regular"
                    android:text="@string/app_name"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_34ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="MissingConstraints" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/tvAppName"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_horizontal|bottom"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnFacebook"
                        style="@style/StyleButtonYellow"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:background="@drawable/backgoundround"
                        android:text="@string/connect_with_facebook"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/_12ssp"
                        tools:targetApi="jelly_bean" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnSignUpWithEmail"
                        style="@style/StyleButtonYellow"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:layout_marginBottom="@dimen/_30sdp"
                        android:background="@drawable/background_border_white"
                        android:fontFamily="@font/quicksand_regular"
                        android:text="@string/sign_up_with_email"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/_13ssp"
                        tools:targetApi="jelly_bean" />

                    <RelativeLayout
                        android:id="@+id/rlnewtoxzitsignup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_30sdp">

                        <TextView
                            android:id="@+id/txtnewtozxit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/quicksand_regular"
                            android:text="@string/already_have_an_account"
                            android:textColor="@color/lightWhite"
                            android:textSize="@dimen/_12ssp"
                            tools:ignore="UnusedAttribute" />

                        <TextView
                            android:id="@+id/txtsignIn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="3dp"
                            android:layout_marginLeft="3dp"
                            android:layout_toEndOf="@+id/txtnewtozxit"
                            android:layout_toRightOf="@+id/txtnewtozxit"
                            android:fontFamily="@font/quicksand_bold"
                            android:text="@string/signin"
                            android:textColor="@color/lightWhite"
                            android:textSize="@dimen/_12ssp"
                            tools:ignore="UnusedAttribute" />
                    </RelativeLayout>

                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>


    </RelativeLayout>
</layout>