<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_splash"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/_minus25sdp"
                android:src="@drawable/logo_splash" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tvAppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_30sdp"
                android:fontFamily="@font/quicksand_regular"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_33ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/tvAppName"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnMerchant"
                    style="@style/StyleButtonYellow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_29sdp"
                    android:layout_marginEnd="@dimen/_29sdp"
                    android:background="@drawable/backgoundround"
                    android:text="@string/merchants_artist"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_12ssp"
                    tools:targetApi="jelly_bean" />

                <Button
                    android:id="@+id/btnUser"
                    style="@style/StyleButtonYellow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_29sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_29sdp"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:background="@drawable/background_border_white"
                    android:fontFamily="@font/quicksand_regular"
                    android:text="@string/user"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_14ssp"
                    tools:targetApi="jelly_bean" />
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>

</layout>